--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <input type="number" id="entrada">
     <button id="btn">boton</button>
     <div id="texto"></div>
+    <div id="texto2"></div>
     <script src="main.js"></script>
 </body>
 </html>
