add folder for every single exercise

--- a/fibonacci/index.html
+++ b/fibonacci/index.html
@@ -8,12 +8,10 @@
     
 </head>
 <body>
-    <h1>es o no par</h1>
-    <p>lorem ipsum dolor </p>
+    <h1>Dibujar la serie de Fibonacci hasta el numero N</h1>
     <input type="number" id="entrada">
     <button id="btn">boton</button>
     <div id="texto"></div>
-    <div id="texto2"></div>
     <script src="main.js"></script>
 </body>
 </html>
